# servicenow-mcp-fast

./: .env.example  .gitignore  Dockerfile  README.md  inspector.ps1  pyproject.toml
deploy/: Caddyfile  docker-compose.yml
docs/: AUTHENTICATION.md  DEPLOYMENT_EC2.md  FINAL_REPORT_OUTLINE.md  HTTP_HARDENING_CHANGES.md
src/servicenow_mcp/: __init__.py  application.py  config_loader.py  server.py  server_sse.py
src/servicenow_mcp/auth/: __init__.py  auth_manager.py  endpoint_auth.py
src/servicenow_mcp/tools/: __init__.py  elite_ipvpn_cfs_instance_tools.py  elite_ipvpn_cfs_order_tools.py  generic_table_tools.py  incident_tools.py  knowledge_base.py  network_element_tools.py  pe_router_rfs_instance_tools.py  pe_router_rfs_order_tools.py  script_include_tools.py  story_tools.py  user_tools.py  vrf_tools.py  workflow_tools.py
src/servicenow_mcp/utils/: __init__.py  config.py  helpers.py  http_client.py  logging_utils.py
