[project]
name = "servicenow-mcp"
version = "0.1.0"
description = "ServiceNow MCP Server using FastMCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "mcp[cli]>=1.0.0",
    "annotated-types>=0.7.0",
    "anyio>=4.8.0",
    "httpx>=0.28.1",
    "idna>=3.10",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "python-dotenv>=1.0.1",
    "sniffio>=1.3.1",
    "sse-starlette>=2.2.1",
    "starlette>=0.45.2",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.34.0",
    "pyyaml>=6.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
servicenow-mcp = "servicenow_mcp.application:main"
